Fix: display nav bar on small screen

--- a/src/components/common/header/Header.module.css
+++ b/src/components/common/header/Header.module.css
@@ -82,7 +82,7 @@
 
 @media (max-width: 768px) {
   .nav {
-    display: none;
+    display: block;
   }
 
   .header {
